syntax = "proto3";

package chaparral.v1;

service AdminService {
    // ListStorageRoots returns a list of the OCFL Storage Roots managed by the service
    rpc ListStorageRoots(ListStorageRootsRequest) returns (ListStorageRootsResponse) {}
    
    // ScanObjects searches an OCFL storage root, returning a stream of object ids.
    rpc ScanObjects(ScanObjectsRequest) returns(stream ScanObjectsResponse){}
}

message ListStorageRootsRequest{}

message ListStorageRootsResponse{
    message StorageRoot {
        // the group that the storage root is part of.
        string group_id = 1;
        // storage root's id for its group.
        string storage_root_id = 2;
        // OCFL spec
        string spec = 3;
        // Storage root description
        string description = 4;
    }
    repeated StorageRoot storage_roots = 1;
}


message ScanObjectsRequest{
    string group_id = 1;
    string storage_root_id = 2;
}

message ScanObjectsResponse{
    string object_id = 1;
    string spec = 2;
}
